# conversational-template

./: README.md  pyproject.toml
src/conversational_template/: main.py
src/conversational_template/agents/: __init__.py  classification_agent.py  customer_relationship_agent.py
src/conversational_template/models/: __init__.py  conversation_classification.py  flow_state.py
