[project]
name = "conversational_template"
version = "0.1.0"
description = "conversational-template using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
]

[project.scripts]
kickoff = "conversational_template.main:kickoff"
run_crew = "conversational_template.main:kickoff"
plot = "conversational_template.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
